--- a/awesome_website/users/templates/registration/login.html
+++ b/awesome_website/users/templates/registration/login.html
@@ -1,5 +1,4 @@
 <!--users/templates/registration/login.html-->
-
 {% extends 'base.html' %}
 
 {% block content %}
@@ -12,4 +11,6 @@
 </form>
 
 <a href="{% url 'dashboard' %}">Back to dashboard</a>
+<a href="{% url 'password_reset' %}">Reset password</a>
+<a href="{% url 'register' %}">Register</a>
 {% endblock %}
